patch: fix the hover animation on custom links that was not wrapping on multiline links

--- a/static/css/tw.css
+++ b/static/css/tw.css
@@ -21,14 +21,17 @@
 }
 
 .at--custom-link {
-    @apply relative;
+    background-image: linear-gradient(
+        color-mix(in oklab, var(--color-yellow-300) 50%, transparent),
+        color-mix(in oklab, var(--color-yellow-300) 50%, transparent)
+    );
+    background-size: 100% calc(var(--spacing) * 2.5);
+    background-position: 0 100%;
+    background-repeat: no-repeat;
+    transition: background-size 300ms ease;
 }
 
-.at--custom-link::after {
-    @apply absolute bottom-0 left-0 -z-10 block h-2.5 w-full bg-yellow-300/50 transition-all duration-300;
-    content: "";
-}
-
-.at--custom-link:hover::after {
-    @apply h-full bg-yellow-300;
+.at--custom-link:hover,
+.group:has(.at--custom-link):is(:hover) .at--custom-link {
+    background-size: 100% 100%;
 }
